# Co-DETR-TensorRT

./: README.md  co_detr_trt.cpp  codetr.cpp  codetr.h
linux_cc/co_detr/: CMakeLists.txt
linux_cc/co_detr/src/: co_detr_add_nms.py  co_detr_trt.cpp  codetr.cpp
linux_cc/plugin/: Makefile  Makefile.inc  trt_grid_sampler_kernel.cu  trt_grid_sampler_kernel.hpp
plugin/: CMakeLists.txt
